static/css/styles.css
/* ... */
/* Hero background image applied to main container only on the home page */
.hero-bg {
    background-image: url(../images/hero-image.avif);
    background-size: cover;
    background-repeat: no-repeat;
    background-position: top center;
}

/* Glassmorphic effect for cards and forms */
.glassmorphic {
    background: var(--eclectic-transparent);
    border-radius: 16px;
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    backdrop-filter: blur(5px);
    border: 1px solid rgba(255, 255, 255, 0.3);
}

.universe {
    font-size: 1.8rem;
    font-weight: 500;
    line-height: 1.2;
    margin: 0.5em 0;
    font-style: italic;
}

/* Match the top corner border radius of card image, to the same px as the card itself. */
.card-img-top {
    border-top-left-radius: 16px;
    border-top-right-radius: 16px;
}

.card-img-overlay {
    height: 45px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
    border: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

.card-banner {
    height: 45px;
    border-radius: 0;
    border: 0;
    padding: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    left: 0;
    right: 0;
    top: 65%;
}

.card-banner h5 {
    margin-bottom: 0;
}

.card-img-overlay h5 {
    margin-bottom: 0;
}

/* Initially hides the shop cards while the loaders are spinning */
.shop-card {
    display: none;
    transition: transform .2s;
}

/* Shop cards grow on hover with a glow effect */
.shop-card:hover {
    transform: scale(1.1);
    z-index: 99;
    border: 2px solid #dadada;
    border-radius: 16px;
    outline: none;
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
}

/* Glassmorphic style effects for shop and binder headings */
.glow {
    background: var(--eclectic-transparent);
    backdrop-filter: blur(5px);
    border-radius: 16px;
    padding: 0.5rem;
    border: 2px solid rgba(255, 255, 255, 0.3);
    transform: scale(1.1);
    z-index: 99;

    outline: none;
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
}

/* Binder flip card container, with perspective for 3D effect */
.binder-card {
    perspective: 1000px;
    background-color: transparent;
    width: 266px;
    height: 452px;
    display: none;
    transition: transform .2s;
    border: 2px solid transparent;
}

/* Fixed size for binder card image, changes at different screen sizes */
.binder-card img {
    height: 300px;
}

/* Stripped back card title for better flex layout */
.card-title {
    padding: 0;
    margin: 0;
}

/* Container to position the front and back of the card */
.card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

/* A horizontal flip when the mouse moves over the flip box container */
.binder-card:hover .card-inner {
    transform: rotateY(180deg);
    border: 2px solid #dadada;
    border-radius: 16px;
    outline: none;
    border-color: #9ecaed;
    box-shadow: 0 0 10px #9ecaed;
}

/* Position the front and the back of the card */
.card-front,
.card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    /* Safari */
    backface-visibility: hidden;
}

/* Styling of the back of the binder flip card */
.card-back {
    border-radius: 16px;
    transform: rotateY(180deg);
}

/* Remove padding from card-body to create more space on the flex layout */
.card-body {
    padding: 0;
}

/* Rarity colours for shop card badges */
.badge.common {
    background-color: var(--eclectic);
    color: black;
}

.badge.uncommon {
    background-color: var(--nasturtium-shoot);
    color: black;
}

.badge.rare {
    background-color: var(--skylla);
    color: black;
}

.badge.epic {
    background-color: var(--fuschia-blue);
}

.badge.legendary {
    background-color: var(--vivid-yellow);
    color: black;
}

.badge.mythic {
    background-color: gold;
    color: black;
}

.archetype {
    font-size: medium;
}

.badge {
    font-size: small;
}

/* Custom buttons, skewed to match nav items */
.buy-button,
.account-button {
    background-color: var(--vivid-yellow);
    color: black;
    transform: skew(-30deg);
    border-radius: 0;
}

.cancel {
    background-color: var(--ecstatic-red);
    color: black;
    transform: skew(-30deg);
    border-radius: 0;
}

/* Unskew class applied to the button span text to unmutate it */
.unskew {
    display: inline-block;
    transform: skew(30deg);
    font-style: italic;
    padding: 3px;
    font-weight: bold;
}

/* Buttons change colour and pulse on hover */
.buy-button:hover,
.account-button:hover {
    background-color: var(--skylla);
    color: white;
    transform: skew(-30deg);
    animation: pulse 2s infinite;
}

/* Pulsing animation used on hovering over the buttons, skewed to match the button */
@keyframes pulse {
    0% {
        transform: scale(0.95);
        transform: skew(-30deg);
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
    }

    70% {
        transform: scale(1);
        transform: skew(-30deg);
        box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
    }

    100% {
        transform: scale(0.95);
        transform: skew(-30deg);
        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
    }
}

/* Spinning loader while the dom loads content and the file content pulls through to the cards */
.loader {
    border-top: 16px solid var(--ecstatic-red);
    border-right: 16px solid var(--skylla);
    border-bottom: 16px solid var(--fuschia-blue);
    border-left: 16px solid var(--nasturtium-shoot);
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
}

/* Spinning animations for screen loader on shop page */
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }

    100% {
        -webkit-transform: rotate(360deg);
    }
}
/* ... */

